tests/errors/extraneous_function_decl.err
Parse error: Maybe type information is missing for function declaration?
1: foo<T>(n: T): T {  }(){  }
                         ^
